Praticas realizadas segunda

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     </center>
     
-    <script src="programa02.js"></script>
+    <script src="programa05
+    .js"></script>
 </body>
 </html>
