Alterarção de codigo

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <h1>Pratica javaScript</h1>
        
         <h2 id="view01">...</h2>
+        <h2 id="view02">...</h2>
 
     </center>
     
-    <script src="programa05
-    .js"></script>
+    <script src="programa05.js"></script>
 </body>
 </html>
