--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <h1>Pratica javaScript</h1>
        
         <h2 id="view01">...</h2>
-        <h2 id="view02">...</h2>
+        <h1 class="view02"> class</h2>
+            <span>span</span>
 
     </center>
     
